# whelsplit

./: .env.example  .gitignore  README.md
backend/: pyproject.toml
backend/app/: database.py  main.py  models.py  schemas.py
backend/app/routes/: balances.py  currency.py  expenses.py  people.py
backend/app/services/: currency.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/api/: client.ts  currency.ts
frontend/src/components/: BottomNav.tsx  CurrencySelector.tsx
frontend/src/pages/: AddExpensePage.tsx  DashboardPage.tsx  ExpenseDetailsPage.tsx  ExpensesPage.tsx  PeoplePage.tsx
frontend/src/types/: index.ts
frontend/src/utils/: dates.ts
