[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whelsplit-backend"
version = "0.1.0"
description = "FastAPI backend for whelsplit"
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn==0.30.6",
  "sqlmodel==0.0.22",
  "pydantic==2.9.2",
  "gunicorn==23.0.0",
  "forex-python",
]

[tool.setuptools]
packages = ["app"]
